app-test/testdata/typesystem/neg/field-access-with-any-type/check/field3.check
Error in "testdata/typesystem/neg/field-access-with-any-type/src/field.cal" on line 11:
            OUT <-- n.foo; // error
                    ^
Not a product.